webpack added on project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
     <h2>Wel come to d3</h2>
-
-    <script src="main.js"></script>
+    <p>Hello i am first p tag</p>
+    <p>me second </p>
+    <p>And i ma last one :)</p>
+    
+    <script src="assets/build/js/main.js"></script>
 </body>
 </html>
