welcome message added on html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
 
-    <h2>Wel come to d3</h2>
-    <p>Hello i am first p tag</p>
-    <p>me second </p>
-    <p>And i ma last one :)</p>
-    
+    <h1>Welcome to D3 world</h1>
     <script src="assets/build/js/main.js"></script>
 </body>
 </html>
