--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
     <h1>Welcome to D3 world</h1>
+    <p>Hello i am first p tag herer</p>
+    <p>I am the second one</p>
+    <p>my bad i am last one :( </p>
     <script src="assets/build/js/main.js"></script>
 </body>
 </html>
