--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <style></style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>learning d3</title>
+    <title>D3 simple example</title>
+    <style>
+        .chart div{
+            font: 10px sans-serif;
+            background-color: steelblue;
+            background-color: steelblue;
+            text-align: right;
+            padding: 3px;
+            margin: 1px;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-
-    <h1>Welcome to D3 world</h1>
+    <!-- Simple chart -->
+    <div class="chart"></div>
+    
+    <!-- Scale chart -->
+    <div class="chart scale-chart"></div>
+    
     <script src="assets/build/js/main.js"></script>
 </body>
 </html>
