--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>learning d3</title>
+    <link rel="stylesheet" href="assets/css/bootstrap-v4.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <h1>Welcome to D3 world</h1>
-    <script src="assets/build/js/main.js"></script>
+    <div class="container">
+        <div class="row">
+            <div id="chart-area">
+            </div>
+        </div>
+    </div>
+
+    <script src="assets/js/d3-v5.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
