--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="row">
-            <div id="chart-area">
+            <div id="chart">
             </div>
         </div>
     </div>
